working on displaying names properly when entered, mainly working on displayNames function and made some todo notes in index.html

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #e7e7e7;
-    background-color: #2D2D2D;
+    background-color: #464444;
 }
 
 #contacth1 {
